<resources>

    <string name="app_name">CardEmulator</string>

    <!-- auth screen -->
    <string name="welcome">Добро пожаловать</string>
    <string name="auth_in_app">Авторизуйтесь в приложении</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="auth">Войти</string>
    <string name="incorrect_email">Неккоректный email</string>
    <string name="incorrect_password">Неккоректный пароль</string>
    <string name="registration"><u>Зарегистрироваться</u></string>

    <!--  registration screen  -->
    <string name="registration_title">Регистрация</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="secure_key">ключ восстановления(для восстановления пароля)</string>
    <string name="empty_field_error">Поле не может быть пустым</string>
    <string name="uncorrect_value">Некоректное значение</string>

    <!--  makeCardFragment  -->
    <string name="choose_style">Выберите стиль карты</string>
    <string name="choose_number">Выберите номер карты</string>

    <!--  home fragment  -->
    <string name="home_title">Главная</string>
    <string name="history">История покупок</string>
    <string name="balance">Пополнить баланс</string>

    <!--  cards fragment  -->
    <string name="cards_title">Выберите карту</string>
    <string name="cards_bottom_title">Оплата</string>

    <!--  profile fragment  -->
    <string name="profile_title">Профиль</string>
    <string name="change_name">Сменить имя</string>
    <string name="leave_profile">Выйти из аккаунта</string>

</resources>