<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:importantForAccessibility="no"
        android:src="@drawable/auth_screen_card" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        style="@style/DefaultTitleStyle"
        android:layout_marginBottom="30dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_in_app"
        style="@style/SecondaryTitleStyle"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/login"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:maxLength="25"
            android:inputType=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:drawableStart="@drawable/ic_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="15"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:layout_marginBottom="40dp"/>

    <com.example.base.base.view.ColorButton
        android:id="@+id/bEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:button_text="@string/auth"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="@color/blue"/>

</LinearLayout>